corrected mistakes - took out vh height for sections (it affected viewport sizing change too much) - gave real dimensions to hero section's img

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 .main,
 .quote,
 .footer {
-    padding: 0px 200px;
+    padding: 0px 300px;
 }
 
 button,
@@ -21,10 +21,10 @@ button,
 
 .hero {
     background: #1f2937;
+    display: flex;
+    flex-direction: column;
     align-items: flex-start;
     color: #f9faf8;
-/* erase height is necessary*/
-    height: 50vh;
 }
 
 .header {
@@ -61,7 +61,7 @@ a {
 #hero-text {
     display: flex;
     flex-direction: column;
-    max-width: 350px;
+    max-width: 400px;
     gap: 15px;
 }
 
@@ -84,8 +84,10 @@ button {
     background-color: rgba(211, 211, 211, 0.808);
     align-items: center;
     justify-content: center;
-    width: 350px;
+    width: 300px;
+    min-height: 150px;
     font-size: 18px;
+    flex-shrink: 0;
 }
 
 /*main section*/
@@ -94,7 +96,6 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 50vh;
 }
 
 h1 {
@@ -131,6 +132,7 @@ h1 {
     background-color: #e5e7eb;
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 .quote-text {
@@ -141,5 +143,8 @@ h1 {
 
 .signature {
     font-weight: 700;
+    display: flex;
+    justify-content: flex-end;
+    margin: -30px 0px 0px 0px;
 }
 
